--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -126,8 +126,8 @@ IDR_BITTORRENT_ICON     ICON                    "res\\Bittorrent.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,1,0,47
- PRODUCTVERSION 2,1,0,47
+ FILEVERSION 2,1,0,48
+ PRODUCTVERSION 2,1,0,48
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -145,12 +145,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 1, 0, 47"
+            VALUE "FileVersion", "2, 1, 0, 48"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 1, 0, 47"
+            VALUE "ProductVersion", "2, 1, 0, 48"
         END
     END
     BLOCK "VarFileInfo"
@@ -2063,9 +2063,8 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,15,17,115,12
     CONTROL         "Watch library folders",IDC_WATCH_FOLDERS,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,15,31,115,12
-    CONTROL         "Maintain alternate source mesh",IDC_SOURCE_MESH,"Button",
-                    BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,15,73,115,
-                    12
+    CONTROL         "Quick hashing (Uses more CPU)",IDC_HIGH_HASH,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,15,73,115,12
     CONTROL         "Filter objects by extension",IDC_SCHEMA_TYPES,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,15,59,115,12
     CONTROL         "Preserve hash integrity",IDC_HASH_INTEGRITY,"Button",
@@ -2814,10 +2813,10 @@ BEGIN
     PUSHBUTTON      "",IDC_DOWNLOADS_BROWSE,155,112,23,20
 END
 
-IDD_TORRENT_TRACKER DIALOG  0, 0, 292, 220
+IDD_TORRENT_TRACKER DIALOGEX 0, 0, 292, 231
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "BitTorrent Tracker Viewer"
-FONT 8, "Tahoma"
+CAPTION "BitTorrent Advanced Information"
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Torrent &Information:",IDC_STATIC,5,5,280,55
     LTEXT           "Name:",IDC_STATIC,15,20,35,12,SS_CENTERIMAGE
@@ -2825,22 +2824,26 @@ BEGIN
                     ES_READONLY
     LTEXT           "Tracker:",IDC_STATIC,15,40,35,12,SS_CENTERIMAGE
     EDITTEXT        IDC_TORRENT_TRACKER,55,40,220,12,ES_AUTOHSCROLL
-    GROUPBOX        "&Downloaders:",IDC_STATIC,5,65,280,40
-    LTEXT           "Completed (Seeds):",IDC_STATIC,15,81,80,12,
+    GROUPBOX        "&Downloaders:",IDC_STATIC,5,62,280,26
+    LTEXT           "Completed (Seeds):",IDC_STATIC,15,71,80,12,
                     SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_COMPLETED,100,81,40,12,ES_CENTER | 
+    EDITTEXT        IDC_TORRENT_COMPLETED,100,71,40,12,ES_CENTER | 
                     ES_AUTOHSCROLL | ES_READONLY
-    RTEXT           "Incomplete:",IDC_STATIC,145,81,80,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_INCOMPLETE,235,81,40,12,ES_CENTER | 
+    RTEXT           "Incomplete:",IDC_STATIC,145,71,80,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_TORRENT_INCOMPLETE,235,71,40,12,ES_CENTER | 
                     ES_AUTOHSCROLL | ES_READONLY
-    GROUPBOX        "&Files:",IDC_STATIC,5,110,280,85
+    GROUPBOX        "&Files:",IDC_STATIC,5,120,280,85
     CONTROL         "List1",IDC_TORRENT_FILES,"SysListView32",LVS_REPORT | 
-                    LVS_SHAREIMAGELISTS | WS_BORDER | WS_TABSTOP,15,125,260,
+                    LVS_SHAREIMAGELISTS | WS_BORDER | WS_TABSTOP,15,135,260,
                     60
-    PUSHBUTTON      "&Refresh",IDC_TORRENT_REFRESH,5,200,50,14
-    COMBOBOX        IDC_TORRENT_VIEW,60,200,65,40,CBS_DROPDOWNLIST | NOT 
+    PUSHBUTTON      "&Refresh",IDC_TORRENT_REFRESH,5,210,50,14
+    COMBOBOX        IDC_TORRENT_VIEW,60,210,65,40,CBS_DROPDOWNLIST | NOT 
                     WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "Close",IDOK,235,200,50,14
+    DEFPUSHBUTTON   "Close",IDOK,235,210,50,14
+    COMBOBOX        IDC_STARTTORRENTDOWNLOADS,184,101,91,66,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Start new download transfers:",IDC_STATIC,26,103,154,9
+    GROUPBOX        "Transfers:",IDC_STATIC,5,92,280,27
 END
 
 IDD_HELP DIALOG  0, 0, 292, 159
@@ -3631,7 +3634,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 285
         TOPMARGIN, 7
-        BOTTOMMARGIN, 213
+        BOTTOMMARGIN, 224
     END
 
     IDD_HELP, DIALOG
@@ -4073,6 +4076,13 @@ BEGIN
 0x6956, 0x7765, 0x4620, 0x6c69, 0x7365, "\000" 
     IDC_TORRENT_VIEW, 0x403, 10, 0
 0x6956, 0x7765, 0x4420, 0x7461, 0x0061, 
+    IDC_STARTTORRENTDOWNLOADS, 0x403, 10, 0
+0x7341, 0x6e20, 0x6565, 0x6564, 0x0064, 
+    IDC_STARTTORRENTDOWNLOADS, 0x403, 21, 0
+0x6857, 0x6e65, 0x7220, 0x7461, 0x6f69, 0x6f20, 0x6576, 0x2072, 0x3031, 
+0x2530, "\000" 
+    IDC_STARTTORRENTDOWNLOADS, 0x403, 6, 0
+0x654e, 0x6576, 0x0072, 
     0
 END
 
