--- a/trunk/shareaza/Shareaza.rc
+++ b/trunk/shareaza/Shareaza.rc
@@ -3019,8 +3019,9 @@ BEGIN
     EDITTEXT        IDC_TORRENTS_TORRENTMAKER,15,176,225,12,ES_AUTOHSCROLL | 
                     ES_READONLY | NOT WS_TABSTOP
     PUSHBUTTON      "",IDC_TORRENTS_TORRENTMAKERBROWSE,245,172,23,20
-    RTEXT           "Default Tracker:",IDC_STATIC,7,197,58,11,SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_DEFAULTTRACKER,72,197,194,12,ES_AUTOHSCROLL
+    RTEXT           "Default Tracker: ",IDC_STATIC,14,197,69,11,
+                    SS_CENTERIMAGE
+    EDITTEXT        IDC_TORRENT_DEFAULTTRACKER,83,197,184,12,ES_AUTOHSCROLL
     LTEXT           "%",IDC_STATIC,264,81,8,11,SS_CENTERIMAGE,
                     WS_EX_TRANSPARENT
 END
