--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -127,8 +127,8 @@ IDR_BITTORRENT_ICON     ICON                    "res\\Bittorrent.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,1,0,137
- PRODUCTVERSION 2,1,0,137
+ FILEVERSION 2,1,0,140
+ PRODUCTVERSION 2,1,0,140
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -146,12 +146,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 1, 0, 137"
+            VALUE "FileVersion", "2, 1, 0, 140"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2005."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 1, 0, 137"
+            VALUE "ProductVersion", "2, 1, 0, 140"
         END
     END
     BLOCK "VarFileInfo"
@@ -2820,37 +2820,46 @@ BEGIN
     PUSHBUTTON      "",IDC_DOWNLOADS_BROWSE,155,112,23,20
 END
 
-IDD_TORRENT_TRACKER DIALOGEX 0, 0, 292, 231
+IDD_TORRENT_TRACKER DIALOGEX 0, 0, 292, 246
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "BitTorrent Advanced Information"
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Torrent &Information:",IDC_STATIC,5,5,280,55
-    LTEXT           "Name:",IDC_STATIC,15,20,35,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_NAME,55,20,220,12,ES_AUTOHSCROLL | 
+    GROUPBOX        "Torrent &Information:",IDC_STATIC,7,3,278,80
+    LTEXT           "Name:",IDC_STATIC,14,13,36,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_TORRENT_NAME,55,13,220,12,ES_AUTOHSCROLL | 
                     ES_READONLY
-    LTEXT           "Tracker:",IDC_STATIC,15,40,35,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_TRACKER,55,40,220,12,ES_AUTOHSCROLL
-    GROUPBOX        "&Downloaders:",IDC_STATIC,5,62,280,26
-    LTEXT           "Completed (Seeds):",IDC_STATIC,15,71,80,12,
+    LTEXT           "Tracker:",IDC_STATIC,14,67,36,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_TORRENT_TRACKER,55,67,220,12,ES_AUTOHSCROLL
+    GROUPBOX        "&Downloaders:",IDC_STATIC,5,85,280,24
+    LTEXT           "Completed (Seeds):",IDC_STATIC,15,93,80,12,
                     SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_COMPLETED,100,71,40,12,ES_CENTER | 
+    EDITTEXT        IDC_TORRENT_COMPLETED,100,93,40,12,ES_CENTER | 
                     ES_AUTOHSCROLL | ES_READONLY
-    RTEXT           "Incomplete:",IDC_STATIC,145,71,80,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_INCOMPLETE,235,71,40,12,ES_CENTER | 
+    RTEXT           "Incomplete:",IDC_STATIC,145,93,80,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_TORRENT_INCOMPLETE,235,93,40,12,ES_CENTER | 
                     ES_AUTOHSCROLL | ES_READONLY
-    GROUPBOX        "&Files:",IDC_STATIC,5,120,280,85
+    GROUPBOX        "&Files:",IDC_STATIC,5,134,280,88
     CONTROL         "List1",IDC_TORRENT_FILES,"SysListView32",LVS_REPORT | 
-                    LVS_SHAREIMAGELISTS | WS_BORDER | WS_TABSTOP,15,135,260,
-                    60
-    PUSHBUTTON      "&Refresh",IDC_TORRENT_REFRESH,5,210,50,14
-    COMBOBOX        IDC_TORRENT_VIEW,60,210,65,40,CBS_DROPDOWNLIST | NOT 
+                    LVS_SHAREIMAGELISTS | WS_BORDER | WS_TABSTOP,15,144,260,
+                    74
+    PUSHBUTTON      "&Refresh",IDC_TORRENT_REFRESH,5,225,50,14
+    COMBOBOX        IDC_TORRENT_VIEW,60,227,65,40,CBS_DROPDOWNLIST | NOT 
                     WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "Close",IDOK,235,210,50,14
-    COMBOBOX        IDC_STARTTORRENTDOWNLOADS,146,101,129,66,
+    DEFPUSHBUTTON   "Close",IDOK,235,225,50,14
+    COMBOBOX        IDC_TORRENT_STARTDOWNLOADS,146,118,129,66,
                     CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Start new download transfers:",IDC_STATIC,15,103,116,9
-    GROUPBOX        "Transfers:",IDC_STATIC,5,92,280,27
+    RTEXT           "Start new download transfers:",IDC_STATIC,15,120,116,9
+    GROUPBOX        "Transfers:",IDC_STATIC,5,110,280,24
+    EDITTEXT        IDC_TORRENT_COMMENTS,55,42,220,22,ES_AUTOHSCROLL | 
+                    ES_READONLY
+    EDITTEXT        IDC_TORRENT_CREATEDBY,167,28,108,12,ES_AUTOHSCROLL | 
+                    ES_READONLY
+    EDITTEXT        IDC_TORRENT_CREATIONDATE,55,28,75,12,ES_AUTOHSCROLL | 
+                    ES_READONLY
+    LTEXT           "Comments:",IDC_STATIC,14,42,36,12,SS_CENTERIMAGE
+    LTEXT           "Created:",IDC_STATIC,14,28,36,12,SS_CENTERIMAGE
+    LTEXT           "By:",IDC_STATIC,136,28,25,12,SS_CENTERIMAGE,WS_EX_RIGHT
 END
 
 IDD_HELP DIALOG  0, 0, 292, 159
@@ -3702,7 +3711,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 285
         TOPMARGIN, 7
-        BOTTOMMARGIN, 224
+        BOTTOMMARGIN, 239
     END
 
     IDD_HELP, DIALOG
@@ -4168,15 +4177,15 @@ BEGIN
 0x6956, 0x7765, 0x4620, 0x6c69, 0x7365, "\000" 
     IDC_TORRENT_VIEW, 0x403, 10, 0
 0x6956, 0x7765, 0x4420, 0x7461, 0x0061, 
-    IDC_STARTTORRENTDOWNLOADS, 0x403, 10, 0
+    IDC_TORRENT_STARTDOWNLOADS, 0x403, 10, 0
 0x7341, 0x6e20, 0x6565, 0x6564, 0x0064, 
-    IDC_STARTTORRENTDOWNLOADS, 0x403, 21, 0
+    IDC_TORRENT_STARTDOWNLOADS, 0x403, 21, 0
 0x6857, 0x6e65, 0x7220, 0x7461, 0x6f69, 0x6f20, 0x6576, 0x2072, 0x3031, 
 0x2530, "\000" 
-    IDC_STARTTORRENTDOWNLOADS, 0x403, 20, 0
+    IDC_TORRENT_STARTDOWNLOADS, 0x403, 20, 0
 0x6e4f, 0x796c, 0x7720, 0x6568, 0x206e, 0x6572, 0x7571, 0x7365, 0x6574, 
 0x0064, 
-    IDC_STARTTORRENTDOWNLOADS, 0x403, 6, 0
+    IDC_TORRENT_STARTDOWNLOADS, 0x403, 6, 0
 0x654e, 0x6576, 0x0072, 
     0
 END
