--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -127,8 +127,8 @@ IDR_BITTORRENT_ICON     ICON                    "res\\Bittorrent.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,1,0,148
- PRODUCTVERSION 2,1,0,148
+ FILEVERSION 2,1,0,149
+ PRODUCTVERSION 2,1,0,149
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -146,12 +146,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 1, 0, 148"
+            VALUE "FileVersion", "2, 1, 0, 149"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2005."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 1, 0, 148"
+            VALUE "ProductVersion", "2, 1, 0, 149"
         END
     END
     BLOCK "VarFileInfo"
@@ -5191,6 +5191,7 @@ BEGIN
     ID_DISCOVERY_QUERY      "Query the selected discovery services now."
     ID_DISCOVERY_REMOVE     "Remove the selected discovery services."
     ID_DISCOVERY_ADD        "Add a new discovery service..."
+    ID_DISCOVERY_BLOCKED    "Show blocked services in the Discovery window."
     ID_DISCOVERY_GNUTELLA   "Show bootstrap services in the Discovery window."
     ID_DISCOVERY_WEBCACHE   "Show GWebCache services in the Discovery window."
     ID_DOWNLOADS_AUTO_CLEAR "Automatically clear downloads which have been completed."
